--- a/package.json
+++ b/package.json
@@ -25,13 +25,9 @@
       "src/ts/**/*.{ts,tsx}",
       "!node_modules/"
     ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.ts"
-    ],
     "testMatch": [
       "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
     ],
-    "testEnvironment": "jest-environment-jsdom-sixteen",
     "testURL": "http://localhost",
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
@@ -43,6 +39,7 @@
       "^@/(.*)$": "<rootDir>/src/ts/$1"
     },
     "moduleFileExtensions": [
+      "js",
       "ts",
       "tsx"
     ],
@@ -53,12 +50,18 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
+    "@types/recoil": "^0.0.9",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "cssnano": "^5.0.7",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "npm-run-all": "^4.1.5",
@@ -80,6 +83,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^5.2.0"
+    "react-router": "^5.2.0",
+    "recoil": "^0.4.0"
   }
 }
