--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/recoil": "^0.0.9",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "cssnano": "^5.0.7",
@@ -84,6 +85,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
-    "recoil": "^0.4.0"
+    "recoil": "^0.4.0",
+    "uuid": "^8.3.2"
   }
 }
