--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "postcss-nesting": "^8.0.1",
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-prettier": "^1.2.0",
     "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.5",
