--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "firebase-tools": "^9.16.5",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "npm-run-all": "^4.1.5",
