--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:webpack": "webpack serve --config webpack.config.js --port 5000",
-    "start:css": "postcss --watch -o build/static/css/app.css src/css/root.css",
+    "start:webpack": "webpack serve --config webpack.config.js --port 5000 --content-base public",
+    "start:css": "postcss --watch -o public/static/css/app.css src/css/root.css",
     "start": "npm-run-all -p start:webpack start:css",
     "build:bundle": "NODE_ENV=production webpack --config webpack.config.js",
-    "build:css": "postcss -o build/static/css/app.css src/css/root.css",
+    "build:css": "postcss -o public/static/css/app.css src/css/root.css",
     "build": "npm-run-all build:bundle build:css",
     "lint:css": "stylelint --config stylelint.config.js 'src/css/**/*.css'",
     "lint:ts": "eslint --fix --ext .ts,.tsx src/ts/",
