--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^27.0.1",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
