feat: Allow to connect firebase emulator

--- a/firebase.json
+++ b/firebase.json
@@ -17,6 +17,9 @@
     "database": {
       "port": 9000
     },
+    "hosting": {
+      "port": 5001
+    },
     "ui": {
       "enabled": true
     }
