--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "emulators": "firebase emulators:start",
     "build:bundle": "NODE_ENV=production webpack --config webpack.config.js",
     "build:css": "postcss -o public/static/css/app.css src/css/root.css",
-    "build": "npm-run-all build:bundle build:css",
+    "copy-assets": "cpx 'assets/**' public/static/",
+    "build": "npm-run-all -s build:bundle build:css copy-assets",
     "lint:css": "stylelint --config stylelint.config.js 'src/css/**/*.css'",
     "lint:ts": "eslint --fix --ext .ts,.tsx src/ts/",
     "test": "jest",
@@ -63,6 +64,7 @@
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "cpx": "^1.5.0",
     "cssnano": "^5.0.7",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
