--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "build:css": "postcss -o public/static/css/app.css src/css/root.css",
     "copy-assets": "cpx 'assets/**' public/static/",
     "build": "npm-run-all -s build:bundle build:css copy-assets",
-    "publish:preview": "firebase hosting:channel:deploy preview_name",
-    "publish:production": "firebase hosting:channel:deploy",
+    "deploy:preview": "firebase hosting:channel:deploy preview_name",
+    "deploy:production": "firebase hosting:channel:deploy",
+    "publish:preview": "npm-run-all -s build deploy:preview",
+    "publish:production": "npm-run-all -s build deploy:production",
     "lint:css": "stylelint --config stylelint.config.js 'src/css/**/*.css'",
     "lint:ts": "eslint --fix --ext .ts,.tsx src/ts/",
     "test": "jest",
