--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
+    "eslint_d": "^11.0.0",
     "firebase-tools": "^9.17.0",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.1.0",
