test: add test for info updater

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,8 @@ features = [
   "HtmlCollection",
   "Window",
   "Event",
-  "EventTarget"
+  "EventTarget",
+  "InputEventInit",
+  "EventTarget",
+
 ]
