--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,12 @@ path = "src/rust/main.rs"
 
 [dependencies]
 yew = { git = "https://github.com/yewstack/yew/" }
+yew-agent = { git = "https://github.com/yewstack/yew/" }
 gloo = "0.5"
 gloo-utils = "0.1.1"
 wasm-bindgen = "0.2"
+uuid = {version = "0.8", features = ["v4"]  }
+sha256 = "1.0.1"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
