--- a/src/rust/planning_poker/Cargo.toml
+++ b/src/rust/planning_poker/Cargo.toml
@@ -21,6 +21,7 @@ gloo-utils = "0.1.1"
 wasm-bindgen = "0.2"
 uuid = {version = "0.8", features = ["v4"]  }
 sha256 = "1.0.1"
+domain_id = {path = "../domain_id"}
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
