--- a/src/rust/planning_poker/Cargo.toml
+++ b/src/rust/planning_poker/Cargo.toml
@@ -22,6 +22,8 @@ wasm-bindgen = "0.2"
 uuid = {version = "0.8", features = ["v4"]  }
 sha256 = "1.0.1"
 domain_macro = {path = "../domain_macro"}
+async-trait = "0.1"
+tokio = {version = "1.15", features = ["macros", "rt"]}
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
