--- a/src/rust/planning_poker/Cargo.toml
+++ b/src/rust/planning_poker/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 name = "planning_poker"
 path = "src/lib.rs"
 
-[[bin]]
-name = "planning-poker"
-path = "src/main.rs"
+# [[bin]]
+# name = "planning-poker"
+# path = "src/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
