--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "eslint_d": "^11.1.1",
     "firebase-tools": "^10.5.0",
     "html-webpack-plugin": "^5.5.0",
