refactor: split into files it is able to single file

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,9 @@ repos:
       language: system
       files: "\\.tsx?$"
       args: ["-w"]
+    - id: eslint
+      name: eslint
+      entry: yarn run eslint
+      language: system
+      files: "\\.tsx?$"
+      args: ["--fix", "--ext .ts,.tsx"]
