--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
       "src/ts/**/*.{ts,tsx}",
       "!node_modules/"
     ],
+    "testEnvironment": "jsdom",
     "testMatch": [
       "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
     ],
@@ -53,31 +54,32 @@
   "license": "MIT",
   "devDependencies": {
     "@firebase/rules-unit-testing": "^2.0.2",
-    "@swc/core": "^1.2.162",
+    "@swc/core": "^1.2.164",
     "@swc/jest": "^0.2.20",
+    "@testing-library/react": "^13.0.0",
     "@types/classnames": "^2.3.1",
     "@types/crypto-js": "^4.1.1",
     "@types/firebase": "^3.2.1",
     "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.4",
     "@types/recoil": "^0.0.9",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "cpx": "^1.5.0",
     "cssnano": "^5.1.7",
-    "eslint": "^8.12.0",
+    "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint_d": "^11.1.1",
-    "firebase-tools": "^10.5.0",
+    "eslint_d": "^12.0.0",
+    "firebase-tools": "^10.6.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "npm-run-all": "^4.1.5",
@@ -85,8 +87,8 @@
     "postcss-cli": "^9.1.0",
     "postcss-extend-rule": "^4.0.0",
     "postcss-import": "^14.1.0",
-    "postcss-nesting": "^10.1.3",
-    "prettier": "^2.6.1",
+    "postcss-nesting": "^10.1.4",
+    "prettier": "^2.6.2",
     "stylelint": "^14.6.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0",
@@ -94,9 +96,9 @@
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
-    "webpack": "^5.71.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
     "classnames": "^2.3.1",
