chore: ignore test in production build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,5 +35,9 @@
     "src/ts/**/*.ts",
     "src/ts/**/*.tsx",
     "src/ts/index.tsx"
+  ],
+  "exclude": [
+    "src/ts/**/*.test.ts",
+    "src/ts/**/*.test.tsx"
   ]
 }
