--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "@types/crypto-js": "^4.1.1",
     "@types/firebase": "^3.2.1",
     "@types/jest": "^27.4.1",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "17",
+    "@types/react-dom": "17",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.4",
@@ -109,8 +109,8 @@
     "classnames": "^2.3.1",
     "crypto-js": "^4.1.1",
     "firebase": "^9.6.10",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "17",
+    "react-dom": "17",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
