--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@firebase/rules-unit-testing": "^2.0.2",
     "@swc/core": "^1.2.164",
     "@swc/jest": "^0.2.20",
-    "@testing-library/react": "^13.0.0",
+    "@testing-library/react": "12",
     "@types/classnames": "^2.3.1",
     "@types/crypto-js": "^4.1.1",
     "@types/firebase": "^3.2.1",
