--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
+    "autoprefixer": "^10.4.4",
     "cpx": "^1.5.0",
     "cssnano": "^5.1.7",
     "eslint": "^8.13.0",
