--- a/package.json
+++ b/package.json
@@ -107,11 +107,13 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "@types/react-loader-spinner": "^4.0.0",
     "classnames": "^2.3.1",
     "crypto-js": "^4.1.1",
     "firebase": "^9.6.10",
     "react": "17",
     "react-dom": "17",
+    "react-loader-spinner": "^6.0.0-0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
