--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start:webpack": "webpack serve --config webpack.config.js --port 5000 --static public --history-api-fallback",
+    "start:vite": "vite",
     "start:css": "postcss --watch -o public/static/css/app.css src/css/root.css",
-    "start": "npm-run-all -p start:webpack start:css emulators",
+    "start": "npm-run-all -p start:vite start:css emulators",
     "emulators": "firebase emulators:start",
-    "build:bundle": "NODE_ENV=production webpack --config webpack.config.js",
+    "build:bundle": "NODE_ENV=production vite build --config webpack.config.js",
     "build:css": "postcss -o public/static/css/app.css src/css/root.css",
     "copy-assets": "cpx 'assets/**' public/static/",
     "build": "npm-run-all -s build:bundle build:css copy-assets",
@@ -64,7 +65,6 @@
     "@testing-library/react": "12",
     "@types/classnames": "^2.3.1",
     "@types/crypto-js": "^4.1.1",
-    "@types/firebase": "^3.2.1",
     "@types/jest": "^27.4.1",
     "@types/react": "17",
     "@types/react-dom": "17",
@@ -79,12 +79,12 @@
     "cpx": "^1.5.0",
     "cssnano": "^5.1.7",
     "eslint": "^8.13.0",
+    "eslint_d": "^12.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint_d": "^12.0.0",
     "firebase-tools": "^10.6.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
@@ -102,6 +102,8 @@
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
+    "vite": "^2.9.12",
+    "vite-plugin-solid": "^2.2.6",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
@@ -118,6 +120,7 @@
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.7.2",
+    "solid-js": "^1.4.4",
     "uuid": "^8.3.2"
   }
 }
