--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "watchPathIgnorePatterns": [
       "node_modules"
     ],
-    "setupFilesAfterEnv": [ "<rootDir>/src/ts/setupTests.ts" ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/ts/setupTests.ts"
+    ],
     "globals": {
       "ts-jest": {
         "tsConfig": "tsconfig.test.json",
@@ -66,6 +68,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@firebase/rules-unit-testing": "^2.0.2",
     "@testing-library/jest-dom": "^5.16.4",
