--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint_d": "^12.0.0",
-    "firebase-tools": "^10.6.0",
+    "firebase-tools": "^10.9.2",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "npm-run-all": "^4.1.5",
@@ -118,6 +118,7 @@
     "classnames": "^2.3.1",
     "crypto-js": "^4.1.1",
     "firebase": "^9.6.10",
+    "solid-app-router": "^0.4.0",
     "solid-js": "^1.4.4",
     "uuid": "^8.3.2"
   }
