--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.4.1",
+    "@types/testing-library__jest-dom": "^5.14.4",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
