--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "incremental": true,
     "baseUrl": "./",
     "outDir": "generated",
-    "types": ["vite/client", "jest"],
+    "types": ["vite/client", "jest", "@types/testing-library__jest-dom"],
     "paths": {
       "@/*": [
         "src/ts/*"
