--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/ts/$1",
       "solid-js/web": "<rootDir>/node_modules/solid-js/web/dist/web.cjs",
+      "solid-js/store": "<rootDir>/node_modules/solid-js/store/dist/store.cjs",
       "solid-js": "<rootDir>/node_modules/solid-js/dist/solid.cjs"
     },
     "moduleFileExtensions": [
