--- a/package.json
+++ b/package.json
@@ -61,20 +61,18 @@
     "@firebase/rules-unit-testing": "^2.0.2",
     "@swc/core": "^1.2.164",
     "@swc/jest": "^0.2.20",
-    "@testing-library/react": "12",
-    "@types/classnames": "^2.3.1",
+    "@testing-library/react": "^14.0.0",
     "@types/crypto-js": "^4.1.1",
-    "@types/firebase": "^3.2.1",
-    "@types/jest": "^27.4.1",
-    "@types/react": "17",
-    "@types/react-dom": "17",
+    "@types/jest": "^29.4.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.4",
-    "@types/recoil": "^0.0.9",
-    "@types/uuid": "^8.3.4",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.4",
     "cpx": "^1.5.0",
     "cssnano": "^5.1.7",
@@ -85,39 +83,45 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint_d": "^12.0.0",
-    "firebase-tools": "^10.6.0",
+    "firebase-tools": "^11.23.1",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.5.1",
+    "jest": "^29.4.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
-    "postcss-cli": "^9.1.0",
+    "postcss-cli": "^10.1.0",
     "postcss-extend-rule": "^4.0.0",
-    "postcss-import": "^14.1.0",
-    "postcss-nesting": "^10.1.4",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^11.2.1",
     "prettier": "^2.6.2",
-    "stylelint": "^14.6.1",
+    "redux-observable": "^2.0.0",
+    "redux-toolkit": "^1.1.2",
+    "stylelint": "^15.2.0",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard": "^30.0.1",
     "stylelint-prettier": "^2.0.0",
-    "ts-jest": "^27.1.4",
+    "tailwindcss": "^3.2.7",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
+    "vite": "^4.1.3",
+    "vitest": "^0.28.5",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
-    "@types/react-loader-spinner": "^4.0.0",
     "classnames": "^2.3.1",
     "crypto-js": "^4.1.1",
     "firebase": "^9.6.10",
-    "react": "17",
-    "react-dom": "17",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.0.0-0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.7.2",
-    "uuid": "^8.3.2"
+    "redux": "^4.2.1",
+    "rxjs": "^7.8.0",
+    "uuid": "^9.0.0"
   }
 }
