--- a/package.json
+++ b/package.json
@@ -4,122 +4,69 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:webpack": "webpack serve --config webpack.config.js --port 5000 --static public --history-api-fallback",
-    "start:css": "postcss --watch -o public/static/css/app.css src/css/root.css",
-    "start": "npm-run-all -p start:webpack start:css emulators",
-    "emulators": "firebase emulators:start",
-    "build:bundle": "NODE_ENV=production webpack --config webpack.config.js",
-    "build:css": "postcss -o public/static/css/app.css src/css/root.css",
-    "copy-assets": "cpx 'assets/**' public/static/",
-    "build": "npm-run-all -s build:bundle build:css copy-assets",
+    "start:vite": "vite",
+    "start:css": "tailwindcss --watch -o dist/assets/css/app.css -i ./assets/css/root.css",
+    "start": "concurrently --handle-input \"pnpm:copy-assets\" \"pnpm:start:*\"",
+    "ci": "CI=true vite",
+    "start:emulators": "firebase emulators:start",
+    "build:bundle": "NODE_ENV=production vite build",
+    "build:css": "tailwindcss -o dist/assets/css/app.css -i assets/css/root.css",
+    "copy-assets": "cpx 'assets/svg' dist/static/",
+    "build": "pnpm run build:bundle && pnpm run build:css && pnpm run copy-assets",
     "deploy:preview": "firebase hosting:channel:deploy preview_name",
     "deploy:production": "firebase deploy",
-    "publish:preview": "npm-run-all -s build deploy:preview",
-    "publish:production": "npm-run-all -s build deploy:production",
-    "lint:css": "stylelint --config stylelint.config.js 'src/css/**/*.css'",
-    "lint:ts": "eslint --fix --ext .ts,.tsx src/ts/",
-    "lint": "npm-run-all -s lint:ts lint:css",
-    "test": "firebase emulators:exec 'yarn run jest'",
-    "test:watch": "firebase emulators:exec 'yarn run jest --watch'"
+    "publish:preview": "pnpm run build && pnpm run deploy:preview",
+    "publish:production": "pnpm run build && pnpm run deploy:production",
+    "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix --ext .ts,.tsx src/ts/",
+    "test": "firebase emulators:exec 'npx vitest run'",
+    "test:watch": "firebase emulators:exec 'npx vitest watch'"
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/ts/**/*.{ts,tsx}",
-      "!node_modules/"
-    ],
-    "testEnvironment": "jsdom",
-    "testMatch": [
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
-    ],
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(ts|tsx)$": "@swc/jest"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(ts|tsx)$"
-    ],
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/ts/$1"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "ts",
-      "tsx"
-    ],
-    "watchPathIgnorePatterns": [
-      "node_modules"
-    ],
-    "globals": {
-      "ts-jest": {
-        "tsConfig": "tsconfig.test.json"
-      }
-    }
-  },
-  "author": "",
+  "author": "derui",
   "license": "MIT",
   "devDependencies": {
-    "@firebase/rules-unit-testing": "^2.0.2",
-    "@swc/core": "^1.2.164",
-    "@swc/jest": "^0.2.20",
+    "@firebase/rules-unit-testing": "^2.0.7",
     "@testing-library/react": "^14.0.0",
     "@types/crypto-js": "^4.1.1",
-    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/react-router": "^5.1.18",
+    "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-transition-group": "^4.4.4",
+    "@types/react-transition-group": "^4.4.5",
     "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.4",
+    "concurrently": "^7.6.0",
     "cpx": "^1.5.0",
-    "cssnano": "^5.1.7",
-    "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint_d": "^12.0.0",
+    "eslint_d": "^12.2.1",
     "firebase-tools": "^11.23.1",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.4.3",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.12",
-    "postcss-cli": "^10.1.0",
-    "postcss-extend-rule": "^4.0.0",
-    "postcss-import": "^15.1.0",
-    "postcss-nesting": "^11.2.1",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.4",
     "redux-observable": "^2.0.0",
-    "redux-toolkit": "^1.1.2",
     "stylelint": "^15.2.0",
-    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-prettier": "^2.0.0",
     "tailwindcss": "^3.2.7",
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.2.8",
-    "typescript": "^4.6.3",
+    "typescript": "^4.9.5",
     "vite": "^4.1.3",
-    "vitest": "^0.28.5",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.8.1"
+    "vitest": "^0.28.5"
   },
   "dependencies": {
-    "classnames": "^2.3.1",
+    "@reduxjs/toolkit": "^1.9.2",
+    "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
-    "firebase": "^9.6.10",
+    "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loader-spinner": "^6.0.0-0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "react-transition-group": "^4.4.2",
-    "recoil": "^0.7.2",
+    "react-loader-spinner": "6.0.0-0",
+    "react-router": "^6.8.1",
+    "react-router-dom": "^6.8.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "rxjs": "^7.8.0",
     "uuid": "^9.0.0"
