--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.5",
+    "@types/sinon": "^10.0.13",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
@@ -49,6 +50,7 @@
     "firebase-tools": "^11.23.1",
     "prettier": "^2.8.4",
     "redux-observable": "^2.0.0",
+    "sinon": "^15.0.1",
     "stylelint": "^15.2.0",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-prettier": "^2.0.0",
