--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react",
+    "jsx": "react-jsxdev",
     "incremental": true,
     "baseUrl": "./",
     "outDir": "generated",
