--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
     "firebase": "^9.17.1",
+    "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "6.0.0-0",
