--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "devDependencies": {
     "@firebase/rules-unit-testing": "^2.0.7",
+    "@testing-library/dom": "^9.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/crypto-js": "^4.1.1",
@@ -73,7 +74,6 @@
     "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loader-spinner": "6.0.0-0",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-transition-group": "^4.4.5",
