--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-transition-group": "^4.4.5",
