--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
     "publish:production": "pnpm run build && pnpm run deploy:production",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix --ext .ts,.tsx src/ts/",
     "test": "firebase emulators:exec 'npx vitest run'",
-    "test:watch": "firebase emulators:exec 'npx vitest watch'"
+    "test:watch": "firebase emulators:exec 'npx vitest watch'",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "derui",
   "license": "MIT",
   "devDependencies": {
     "@firebase/rules-unit-testing": "^2.0.7",
+    "@storybook/addon-controls": "7.0.0-beta.61",
+    "@storybook/cli": "7.0.0-beta.61",
+    "@storybook/react": "^7.0.0-beta.61",
+    "@storybook/react-vite": "^7.0.0-beta.61",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -47,6 +53,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint_d": "^12.2.1",
     "firebase-tools": "^11.23.1",
@@ -55,6 +62,7 @@
     "prettier": "^2.8.4",
     "redux-observable": "^2.0.0",
     "sinon": "^15.0.1",
+    "storybook": "7.0.0-beta.61",
     "stylelint": "^15.2.0",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-prettier": "^2.0.0",
