fix: path of svg

--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   "type": "module",
   "scripts": {
     "start:vite": "vite",
-    "start:css": "tailwindcss --watch -o dist/assets/css/app.css -i ./assets/css/root.css",
     "start": "concurrently --handle-input \"pnpm:copy-assets\" \"pnpm:start:*\"",
     "ci": "CI=true vite",
     "start:emulators": "firebase emulators:start",
     "build:bundle": "NODE_ENV=production vite build",
-    "build:css": "tailwindcss -o dist/assets/css/app.css -i assets/css/root.css",
-    "copy-assets": "cpx 'assets/svg' dist/static/",
-    "build": "pnpm run build:bundle && pnpm run build:css && pnpm run copy-assets",
+    "copy-assets": "cpx 'assets/svg/**/*.svg' dist/static/",
+    "build": "pnpm run build:bundle && pnpm run copy-assets",
     "deploy:preview": "firebase hosting:channel:deploy preview_name",
     "deploy:production": "firebase deploy",
     "publish:preview": "pnpm run build && pnpm run deploy:preview",
