--- a/misc/ci/firebase-export-metadata.json
+++ b/misc/ci/firebase-export-metadata.json
@@ -1,5 +1,9 @@
 {
   "version": "11.23.1",
+  "database": {
+    "version": "4.11.0",
+    "path": "database_export"
+  },
   "auth": {
     "version": "11.23.1",
     "path": "auth_export"
