[ci skip] docs: update readme

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ database-debug.log
 ui-debug.log
 firebase-debug.log
 
-src/ts/firebase.config.prod.ts
+src/firebase.config.prod.ts
 /test-results/
 /playwright-report/
 /playwright/.cache/
