--- a/package.json
+++ b/package.json
@@ -28,48 +28,48 @@
   "license": "MIT",
   "devDependencies": {
     "@firebase/rules-unit-testing": "^2.0.7",
-    "@playwright/test": "^1.32.1",
+    "@playwright/test": "^1.32.3",
     "@remix-run/web-fetch": "^4.3.3",
-    "@storybook/addon-controls": "7.0.0-beta.61",
-    "@storybook/cli": "7.0.0-beta.61",
-    "@storybook/react": "^7.0.0-beta.61",
-    "@storybook/react-vite": "^7.0.0-beta.61",
+    "@storybook/addon-controls": "7.0.4",
+    "@storybook/cli": "7.0.4",
+    "@storybook/react": "^7.0.4",
+    "@storybook/react-vite": "^7.0.4",
     "@testing-library/dom": "^9.2.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/crypto-js": "^4.1.1",
-    "@types/react": "^18.0.29",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.5",
     "@types/sinon": "^10.0.13",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "concurrently": "^7.6.0",
+    "concurrently": "^8.0.1",
     "cpx": "^1.5.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "firebase-tools": "^11.25.1",
+    "firebase-tools": "^11.27.0",
     "hygen": "^6.2.11",
     "jsdom": "^21.1.1",
-    "playwright": "^1.32.1",
-    "prettier": "^2.8.6",
-    "sinon": "^15.0.2",
-    "storybook": "7.0.0-beta.61",
-    "stylelint": "^15.3.0",
-    "stylelint-config-standard": "^31.0.0",
+    "playwright": "^1.32.3",
+    "prettier": "^2.8.7",
+    "sinon": "^15.0.3",
+    "storybook": "7.0.4",
+    "stylelint": "^15.4.0",
+    "stylelint-config-standard": "^32.0.0",
     "stylelint-prettier": "^3.0.0",
-    "typescript": "^4.9.5",
+    "typescript": "^5.0.4",
     "vite": "^4.2.1",
-    "vitest": "^0.29.7"
+    "vitest": "^0.30.1"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -78,13 +78,13 @@
     "@twind/preset-tailwind": "^1.1.4",
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
-    "firebase": "^9.18.0",
+    "firebase": "^9.19.1",
     "immer": "^9.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router": "^6.9.0",
-    "react-router-dom": "^6.9.0",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-observable": "^2.0.0",
