--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
   "scripts": {
     "start:vite": "vite",
     "start:tsc": "tsc --watch",
-    "start": "concurrently --handle-input \"pnpm:copy-assets\" \"pnpm:start:*\"",
+    "start": "concurrently --handle-input \"pnpm:start:*\"",
     "ci": "CI=true firebase emulators:exec --ui 'npx vite'",
     "start:emulators": "firebase emulators:start --import ./misc/local",
     "build:bundle": "NODE_ENV=production vite build",
-    "copy-assets": "cpx 'assets/**' dist/static/",
-    "build": "pnpm run build:bundle && pnpm run copy-assets",
+    "build": "pnpm run build:bundle",
     "deploy:preview": "firebase hosting:channel:deploy preview_name",
     "deploy:production": "firebase deploy",
     "publish:preview": "pnpm run build && pnpm run deploy:preview",
