--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,13 @@
 packages:
   - 'packages/**/*'
   - 'configs/**/*'
+
+catalog:
+  clsx: 2.1.1
+  vite: 5.0.12
+  vitest: 1.2.2
+  "@vitejs/plugin-react": 4.2.1
+  jsdom: 24.0.0
+  "@testing-library/react": 14.1.2
+  react: 18.2.0
+  react-dom: 18.2.0
