--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,3 +11,8 @@ catalog:
   "@testing-library/react": 14.1.2
   react: 18.2.0
   react-dom: 18.2.0
+  "@storybook/addon-controls": "8.2.0"
+  "@storybook/cli": "8.2.0"
+  "@storybook/react": "8.2.0"
+  "@storybook/react-vite": "8.2.0"
+  tailwindcss: 3.4.10
