fix: make classes from tailwind

--- a/configs/tailwind-config/package.json
+++ b/configs/tailwind-config/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "type": "module",
   "exports": "./tailwind.config.cjs",
+    "main": "./tailwind.config.cjs",
   "keywords": [],
   "author": "",
   "license": "ISC",
