fix: tailwind invalidate

--- a/configs/tailwind-config/package.json
+++ b/configs/tailwind-config/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "private": true,
   "type": "module",
-  "exports": "./tailwind.config.cjs",
-    "main": "./tailwind.config.cjs",
+  "exports": "./tailwind.config.js",
+    "main": "./tailwind.config.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
