--- a/package.json
+++ b/package.json
@@ -40,17 +40,13 @@
     "@types/react-transition-group": "^4.4.10",
     "@types/sinon": "^17.0.3",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "@vitejs/plugin-react": "^4.2.1",
+      "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
     "cpx": "^1.5.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.33.2",
-      "eslint-plugin-unused-imports": "^3.0.0",
+      "eslint": "catalog:",
+      "eslint-config-prettier": "catalog:",
+      "eslint-plugin-react": "catalog:",
+      "eslint-plugin-unused-imports": "catalog:",
     "firebase-tools": "^13.1.0",
     "hygen": "^6.2.11",
     "jsdom": "^24.0.0",
