--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,3 +16,9 @@ catalog:
   "@storybook/react": "8.2.0"
   "@storybook/react-vite": "8.2.0"
   tailwindcss: 3.4.10
+  "eslint": "^9.9.0"
+  "eslint-config-prettier": "^9.1.0"
+  "eslint-plugin-react": "^7.35.0"
+  "eslint-plugin-unused-imports": "^4.1.3"
+  "typescript-eslint": "^8.1.0"
+  
