--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:watch": "firebase emulators:exec 'npx vitest watch'",
     "test:watch:noemu": "npx vitest watch",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+      "build-storybook": "storybook build",
+      "g": "plop"
   },
   "author": "derui",
   "license": "MIT",
@@ -29,7 +30,7 @@
     "@firebase/rules-unit-testing": "^3.0.1",
     "@playwright/test": "^1.41.1",
     "@remix-run/web-fetch": "^4.4.2",
-      "@testing-library/dom": "^9.3.4",
+    "@testing-library/dom": "^9.3.4",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/crypto-js": "^4.2.2",
@@ -40,19 +41,20 @@
     "@types/react-transition-group": "^4.4.10",
     "@types/sinon": "^17.0.3",
     "@types/uuid": "^9.0.8",
-      "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
     "cpx": "^1.5.0",
-      "eslint": "catalog:",
-      "eslint-config-prettier": "catalog:",
-      "eslint-plugin-react": "catalog:",
-      "eslint-plugin-unused-imports": "catalog:",
+    "eslint": "catalog:",
+    "eslint-config-prettier": "catalog:",
+    "eslint-plugin-react": "catalog:",
+    "eslint-plugin-unused-imports": "catalog:",
     "firebase-tools": "^13.1.0",
     "hygen": "^6.2.11",
     "jsdom": "^24.0.0",
+    "plop": "^4.0.1",
     "prettier": "^3.2.4",
     "sinon": "^17.0.1",
-      "typescript": "^5.3.3",
+    "typescript": "^5.3.3",
     "vite": "^5.0.12",
     "vitest": "^1.2.2"
   },
