--- a/packages/ui/loader/package.json
+++ b/packages/ui/loader/package.json
@@ -15,6 +15,7 @@
     "scripts": {
         "test": "vitest",
         "build": "tailwindcss -i src/style.css -o dist/style.css",
+        "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
         "storybook": "storybook dev -p 6006",
         "build:storybook": "storybook build"
     },
@@ -23,6 +24,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@spp/eslint-config": "workspace:^",
         "@spp/tailwind-config": "workspace:^",
         "@spp/typescript-config": "workspace:^",
         "@spp/ui-icon": "workspace:^",
@@ -32,13 +34,14 @@
         "@storybook/react-vite": "catalog:",
         "@testing-library/react": "catalog:",
         "@vitejs/plugin-react": "catalog:",
+        "eslint": "catalog:",
         "jsdom": "catalog:",
         "tailwindcss": "catalog:",
         "vite": "catalog:",
         "vitest": "catalog:"
     },
-  "dependencies": {
-    "clsx": "catalog:",
-    "react": "catalog:"
-  }
+    "dependencies": {
+        "clsx": "catalog:",
+        "react": "catalog:"
+    }
 }
