--- a/packages/ui/icon/package.json
+++ b/packages/ui/icon/package.json
@@ -9,10 +9,10 @@
     "./dist/"
   ],
   "exports": {
-      ".": {
-          "import": "src/index.ts",
-          "require": "src/index.ts"
-      }
+    ".": {
+      "import": "src/index.ts",
+      "require": "src/index.ts"
+    }
   },
   "module": "./src/index.ts",
   "types": "./src/index.ts",
@@ -20,6 +20,7 @@
   "scripts": {
     "build": "tailwindcss -i src/style.css -o dist/style.css",
     "test": "vitest",
+    "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
     "storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build"
   },
@@ -36,8 +37,9 @@
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
     "@vitejs/plugin-react": "catalog:",
+    "eslint": "catalog:",
     "jsdom": "catalog:",
-      "tailwindcss": "catalog:",
+    "tailwindcss": "catalog:",
     "vite": "catalog:",
     "vitest": "catalog:"
   },
