--- a/packages/ui/loader/package.json
+++ b/packages/ui/loader/package.json
@@ -1,47 +1,51 @@
 {
-    "name": "@spp/ui-loader",
-    "version": "1.0.0",
-    "description": "",
-    "sideEffects": [
-        "dist/*"
-    ],
-    "exports": {
-        ".": {
-            "import": "./src/index.ts",
-            "require": "./src/index.ts"
-        }
-    },
-    "module": "src/index.ts",
-    "scripts": {
-        "test": "vitest",
-        "build": "tailwindcss -i src/style.css -o dist/style.css",
-        "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
-        "storybook": "storybook dev -p 6006",
-        "build:storybook": "storybook build"
-    },
-    "type": "module",
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@spp/eslint-config": "workspace:^",
-        "@spp/tailwind-config": "workspace:^",
-        "@spp/typescript-config": "workspace:^",
-        "@spp/ui-icon": "workspace:^",
-        "@storybook/addon-controls": "catalog:",
-        "@storybook/cli": "catalog:",
-        "@storybook/react": "catalog:",
-        "@storybook/react-vite": "catalog:",
-        "@testing-library/react": "catalog:",
-        "@vitejs/plugin-react": "catalog:",
-        "eslint": "catalog:",
-        "jsdom": "catalog:",
-        "tailwindcss": "catalog:",
-        "vite": "catalog:",
-        "vitest": "catalog:"
-    },
-    "dependencies": {
-        "clsx": "catalog:",
-        "react": "catalog:"
+  "name": "@spp/ui-loader",
+  "version": "1.0.0",
+  "description": "",
+  "sideEffects": [
+    "dist/*"
+  ],
+  "exports": {
+    ".": {
+      "import": "./src/index.ts",
+      "require": "./src/index.ts"
     }
+  },
+  "module": "src/index.ts",
+  "scripts": {
+    "build:css": "tailwindcss -i src/style.css -o dist/style.css",
+    "dev:build:css": "tailwindcss --watch -i src/style.css -o dist/style.css",
+    "test": "vitest run",
+    "dev:test": "vitest watch",
+    "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
+    "dev:storybook": "storybook dev -p 6006",
+    "build:storybook": "storybook build",
+    "dev": "concurrently \"npm:dev:*\""
+  },
+  "type": "module",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@spp/eslint-config": "workspace:^",
+    "@spp/tailwind-config": "workspace:^",
+    "@spp/typescript-config": "workspace:^",
+    "@spp/ui-icon": "workspace:^",
+    "@storybook/addon-controls": "catalog:",
+    "@storybook/cli": "catalog:",
+    "@storybook/react": "catalog:",
+    "@storybook/react-vite": "catalog:",
+    "@testing-library/react": "catalog:",
+    "@vitejs/plugin-react": "catalog:",
+    "concurrently": "catalog:",
+    "eslint": "catalog:",
+    "jsdom": "catalog:",
+    "tailwindcss": "catalog:",
+    "vite": "catalog:",
+    "vitest": "catalog:"
+  },
+  "dependencies": {
+    "clsx": "catalog:",
+    "react": "catalog:"
+  }
 }
