chore: add packages splited

--- a/app/package.json
+++ b/app/package.json
@@ -33,6 +33,9 @@
     "@firebase/rules-unit-testing": "^3.0.1",
     "@playwright/test": "^1.41.1",
     "@remix-run/web-fetch": "^4.4.2",
+    "@spp/eslint-config": "workspace:^",
+    "@spp/tailwind-config": "workspace:^",
+    "@spp/typescript-config": "workspace:^",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
@@ -62,6 +65,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@spp/ui-icon": "workspace:^",
+    "@spp/ui-loader": "workspace:^",
+    "@spp/ui-overlay": "workspace:^",
+    "@spp/ui-radio-button": "workspace:^",
+    "@spp/ui-radio-group": "workspace:^",
+    "@spp/ui-skeleton": "workspace:^",
+    "@spp/ui-toggle-button": "workspace:^",
     "@twind/core": "^1.1.3",
     "@twind/preset-autoprefix": "^1.0.7",
     "@twind/preset-tailwind": "^1.1.4",
