feat: add some templates

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
       name: prettier
       entry: pnpm exec prettier
       language: system
-      files: "\\.tsx?$"
+      files: "\\.[tj]sx?$"
       args: ["-w"]
     - id: eslint
       name: eslint
