--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -22,4 +22,5 @@ catalog:
   "eslint-plugin-react": "^7.35.0"
   "eslint-plugin-unused-imports": "^4.1.3"
   "typescript-eslint": "^8.1.0"
-  "concurrently": "8.2.2" 
+  "concurrently": "8.2.2"
+  "jotai": "2.9.3"
