feat: add first atom

--- a/features/login/package.json
+++ b/features/login/package.json
@@ -48,6 +48,7 @@
     "vitest": "catalog:"
   },
   "dependencies": {
+    "jotai": "catalog:",
     "clsx": "catalog:",
     "react": "catalog:"
   }
