--- a/packages/ui/loader/package.json
+++ b/packages/ui/loader/package.json
@@ -23,7 +23,7 @@
     "dev:storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build",
     "dev": "concurrently \"npm:dev:*\"",
-    "build": "concurrently \"npm:bulid:*\""
+    "build": "concurrently \"npm:build:*\""
   },
   "type": "module",
   "keywords": [],
