feat: add package for array utility

--- a/packages/shared-logic/array/package.json
+++ b/packages/shared-logic/array/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@spp/shared-domain",
+  "name": "@spp/shared-array",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "files": [
     "./dist/"
   ],
@@ -11,7 +12,6 @@
       "types": "src/index.ts"
     }
   },
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "check-type": "tsc --noEmit",
@@ -27,17 +27,13 @@
   "devDependencies": {
     "@spp/eslint-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
-    "@types/crypto-js": "^4.2.2",
-    "@types/uuid": "^9.0.8",
     "concurrently": "catalog:",
     "eslint": "catalog:",
-    "typescript": "catalog:",
     "vite": "catalog:",
-    "vitest": "catalog:"
+    "vitest": "catalog:",
+    "typescript": "catalog:"
   },
   "dependencies": {
-    "crypto-js": "^4.2.0",
-    "immer": "^10.0.3",
-    "uuid": "^9.0.1"
+    
   }
 }
